--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -4,25 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page 3</title>
+    <title>Gallery</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load
-      src="./partials/header.html"
-      icon-path="./img/sprite.svg#logo"
-      highlight-curr="active"
-    />
-
+    <nav>
+      <ul>
+        <li><a href="./1-gallery.html">Gallery</a></li>
+        <li><a href="./2-form.html">Form</a></li>
+      </ul>
+    </nav>
     <main>
       <div class="container">
-        <h1 class="main-title">
-          <span class="main-title-gradient">Welcome</span> to page 3
-        </h1>
-        <load src="./partials/back-link.html" />
+        <h1 class="main-title">Gallery</h1>
       </div>
     </main>
 
-    <load src="./partials/footer.html" />
+    <script src="./js/1-gallery.js"></script>
   </body>
 </html>
