--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -8,18 +8,16 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <nav>
-      <ul>
-        <li><a href="./1-gallery.html">Gallery</a></li>
-        <li><a href="./2-form.html">Form</a></li>
-      </ul>
-    </nav>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="/">Go to home</a></li>
+        </ul>
+      </nav>
+    </header>
     <main>
-      <div class="container">
-        <h1 class="main-title">Gallery</h1>
-      </div>
+      <ul class="gallery"></ul>
     </main>
-
-    <script src="./js/1-gallery.js"></script>
+    <script type="module" src="./js/1-gallery.js"></script>
   </body>
 </html>
