--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -11,7 +11,7 @@
     <header>
       <nav>
         <ul>
-          <li><a href="/">Go to home</a></li>
+          <li><a href="./index.html">Go to home</a></li>
         </ul>
       </nav>
     </header>
