--- a/src/2-form.html
+++ b/src/2-form.html
@@ -15,7 +15,7 @@
     <header>
       <nav>
         <ul>
-          <li><a href="/">Go to home</a></li>
+          <li><a href="./index.html">Go to home</a></li>
         </ul>
       </nav>
     </header>
