--- a/src/2-form.html
+++ b/src/2-form.html
@@ -32,6 +32,6 @@
         <button type="submit">Submit</button>
       </form>
     </main>
-    <script src="./js/2-form.js"></script>
+    <script src="./js/2-form.js" type="module"></script>
   </body>
 </html>
